# magnum_workspace

./: CMakeLists.txt  README.md
src/main/: main.cpp
